# axum-oauth-sample

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  package.json  tailwind.config.js
migrations/: 20231128015228_initial.sql
public/styles/: app.css
src/: index.html  main.rs
src/constants/: mod.rs
src/db/: mod.rs
src/misc/: error.rs  mod.rs
src/models/: mod.rs
src/routes/: auth_google.rs  mod.rs
src/routes/api/: mod.rs
src/routes/api/auth/: auth_discord.rs  auth_github.rs  auth_google.rs  mod.rs
src/routes/auth/: auth_google.rs
src/routes/pages/: mod.rs
src/server/: mod.rs
src/utils/: mod.rs
templates/: 404.html  error.html  index.html  login.html
templates/layouts/: base.html  footer.html  header.html
