[package]
name = "axum-oauth-sample"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.1"
dotenv = "0.15.0"
oauth2 = "4.4.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
