[package]
name = "axum-oauth-sample"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.1" }
axum-extra = { version = "0.9.0", features = ["cookie"] }
cookie = "0.18.0"
dotenv = "0.15.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.34.0", features = ["macros"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
