[package]
name = "axum-oauth-sample"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.1" }
axum-extra = { version = "0.9.0", features = ["cookie", "typed-header"] }
chrono = "0.4.31"
cookie = "0.18.0"
dotenvy = "0.15.7"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
    "sqlite",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
tokio = { version = "1.34.0", features = ["macros"] }
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
